--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,7 +33,7 @@ nav:
     - Contributing guidelines: contribute/contribution-guidelines.md
     - Reviewing and testing changes: contribute/review-test-guide.md
   - System Administration:
-    - Adding new persistent storage: System Administration/Adding storage.md
+    - Adding new persistent storage: system-administration/adding-storage.md
   - Generic:
     - Placeholder: tbd
   - Security:
