--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,6 +34,7 @@ nav:
     - Reviewing and testing changes: contribute/review-test-guide.md
   - System Administration:
     - Adding new persistent storage: system-administration/adding-storage.md
+    - When using recursive options: system-administration/recursive-options.md
   - Generic:
     - Placeholder: tbd
   - Security:
