--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,6 +35,7 @@ nav:
   - System Administration:
     - Adding new persistent storage: system-administration/adding-storage.md
     - When using recursive options: system-administration/recursive-options.md
+    - Creating helper scripts: system-administration/helper-scripts.md
   - Generic:
     - "Using *.d folders": generic/dotdfolders.md
   - Security:
