Add troubleshooting boot time section to mkdocs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,6 +34,7 @@ nav:
     - Reviewing and testing changes: contribute/review-test-guide.md
   - System Administration:
     - Adding new persistent storage: system-administration/adding-storage.md
+    - Troubleshooting boot time: system-administration/boot-time.md
     - Creating helper scripts: system-administration/helper-scripts.md
     - Rebooting a system: system-administration/rebooting_practices.md
     - When using recursive options: system-administration/recursive-options.md
